# opengl-examples

./: .ghcid  .gitignore  .haskell-ghc-mod.json  .hlint.yaml  README.md  opengl-examples.cabal  stack.yaml
Trash/: TetrahedronMesh.hs  gears.c
WRL/: k12dk12dk12dk12P12.wrl
off/: CGAL02.off  abstr.off  bunny.off  cgal03.off  cgal06.off  spheresIntersection.off  union.off  unionTwoCubes.off
src/: Bunny.hs  CGAL02.hs  CGAL03.hs  CGALinterTwoSpheres.hs  CGALunion.hs  CGALunionTwoCubes.hs  CantellatedTesseract.hs  CantiTrunc600Cell.hs  CompoundFiveCubes.hs  CompoundFiveOctahedra.hs  CompoundFiveTetrahedra.hs  CompoundFiveTetrahedra2.hs  CompoundFiveTetrahedraIntersection.hs  CompoundTenTetrahedra.hs  CompoundTenTetrahedra2.hs  Cone.hs  ConeDouble.hs  Cube10.hs  Cubinder.hs  Cylinder.hs  Dodecaplex.hs  Duocylinder.hs  Duocylinder2.hs  GreatIcosahedron.hs  GreatStellatedDodecahedron.hs  Head.hs  Helix.hs  Hexacosihedron.hs  HexagonalDuoprism.hs  Hexasquare.hs  Hopf.hs  HorseSaddle.hs  HorseSaddle2.hs  HorseSaddle3.hs  Hosohedron.hs  InterCubeGSD.hs  InterCubeIsocahedron.hs  InterFiveCubes.hs  InterSphereSphere.hs  Knot.hs  (+49 more)
src-exe/: ExeApple.hs  ExeBunny.hs  ExeCantellatedTesseract.hs  ExeCompoundFiveOctahedra.hs  ExeCompoundFiveTetrahedra.hs  ExeCompoundFiveTetrahedra2.hs  ExeCompoundTenTetrahedra.hs  ExeCompoundTenTetrahedra2.hs  ExeConicalSpiral.hs  ExeConicalSpiral2.hs  ExeCyclide.hs  ExeCylinder.hs  ExeDoublyConicalSpiral.hs  ExeEllipticTorus.hs  ExeEuphonium.hs  ExeGears.hs  ExeGreatIcosahedron.hs  ExeGreatStellatedDodecahedron.hs  ExeHeart.hs  ExeHelix.hs  ExeHexagonalDuoprism.hs  ExeHopfTorus.hs  ExeHorseSaddle.hs  ExeHorseSaddle2.hs  ExeHorseSaddle3.hs  ExeHosohedron.hs  ExeKleinBottle4D.hs  ExeKleinBottleGray.hs  ExeKnot.hs  ExeMobius.hs  ExeMobius2.hs  ExeMobius3.hs  ExeMushroom.hs  ExePrism.hs  ExePrismaticPath.hs  ExeRectifiedTesseract.hs  ExeSeashell.hs  ExeSphereMesh.hs  ExeTeapot.hs  ExeTeapotAnimation.hs  (+12 more)
src/AllCubes/: TheCubes.hs  ztemp.hs
src/Apple/: Apple.hs  Data.hs
src/BiTruncatedTesseract/: BiTruncatedTesseract.hs  Data.hs
src/BianchiPinkall/: BianchiPinkall.hs  BianchiPinkallAnim.hs  BianchiPinkallColors.hs  Helpers.hs
src/BianchiPinkall_old/: BianchiPinkall.hs  Helpers.hs
src/BoyRoman/: BoyRoman.hs  Data.hs
src/BoySurface/: BoySurface.hs  Data.hs
src/Bunny/: Data.hs
src/CGAL/: CGAL02.hs  CGAL03.hs  CGALinterTwoSpheres.hs  CGALunion.hs  CGALunionTwoCubes.hs
src/CantellatedTesseract/: Data.hs
src/CantiTrunc600Cell/: Data.hs
src/Chamfered4dodecahedron/: Chamfered4dodecahedron.hs  Data.hs
src/CompoundFiveCubes/: Data.hs
src/CompoundFiveOctahedra/: Data.hs
src/CompoundFiveTetrahedra/: Data.hs  DataPolar.hs  Intersection.hs
src/CompoundTenTetrahedra/: Data.hs
src/Cone/: ConeMesh.hs  ConeMesh00.hs  TestConeMesh.hs  TestConeMesh0.hs  TwentyCones.hs
src/ConicalSpiral/: ConicalSpiral.hs  ConicalSpiral2.hs  ConicalSpiral3.hs  ConicalSpiral4.hs  ConicalSpiral5.hs  Data.hs  Data2.hs  Data4.hs  DataDoubly.hs  DataDoublySmooth.hs  DoublyConicalSpiral.hs  DoublyConicalSpiralSmooth.hs
src/Cubinder/: Data.hs
src/Cyclide/: Cyclide.hs  Data.hs
src/Dodecaplex/: Data.hs
src/Duocylinder/: Data.hs  Duocylinder.R
src/Duocylinder/Delaunay/: Data.hs  Duocylinder.hs
src/Dupin/: Data.hs  Dupin.hs
src/EllipticTorus/: Data.hs  EllipticTorus.hs
src/Euphonium/: Data.hs  Euphonium.hs
src/Gear/: Data.hs  Gear.hs
src/GreatIcosahedron/: Data.hs
src/GreatStellatedDodecahedron/: Data.hs
src/Head/: Data.hs
src/Heart/: Data.hs  Heart.hs  Heart2.hs  Utils.hs
src/Hexacosihedron/: Data.hs
src/HexagonalDuoprism/: Data.hs
src/Hexasquare/: Data.hs
src/Hopf/: Hopf.hs  HopfCircle.hs  HopfTest.hs  HopfTorus.hs  Villarceau.hs
src/Intersections/: CubeGSD.hs  CubeIsocahedron.hs  FiveCubes.hs  SphereSphere.hs
src/KleinBottle/: Data.hs  KleinBottle.hs
src/KleinBottle4D/: Data.hs  KleinBottle4D.hs
src/KleinBottleGray/: Data.hs  KleinBottleGray.hs
src/Mushroom/: Data.hs
src/NonconvexPolyhedron/: Data.hs  Data2.hs  nonconvexpolyhedron.off
src/Octaplex/: Data.hs
src/Omnitruncated120cell/: Data.hs  Omnitruncated120Cell.hs
src/Pentaract/: Data.hs  Pentaract.hs  Pentaract2.hs  Pentaract3.hs
src/Pinecone/: Data.hs  Pinecone.hs
src/RectifiedTesseract/: Data.hs
src/RegularSphericalTetrahedron/: Data.hs
src/ReuleuxTetrahedron/: Data.hs  regularTetrahedron.hs  sphere1.hs  sphere2.hs  sphere3.hs  sphere4.hs
src/Seashell/: Data.hs  Seashell.hs
src/SineSurface/: Data.hs
src/SmallHexagrammaticHexecontahedron/: Data.hs
src/SnubDodecahedron/: Data.hs  Data2.hs
src/SpaceShuttle/: Data.hs
src/Sphere72edges/: Data.hs  Sphere72Edges.hs
src/StellationsRhombicTriacontahedron/: Data8.hs
src/Strange/: Data.hs
src/Teapot/: Data.hs
src/Tesseract/: Data.hs  Transformations4D.hs
src/Tesseract/Delaunay/: Data.hs  Tesseract.hs
src/TriangulatedSphere/: Data.hs
src/Truncated120Cell/: Data.hs
src/Truncated120Cell3/: Data.hs
src/Truncated120Cellold/: Data.hs
src/TruncatedCuboctahedron/: Data.hs
src/TruncatedTesseract/: Data.hs
src/TudorRose/: Data.hs  TudorRose.hs
src/Tutorial2/: Bindings.hs  Cube.hs  Display.hs  Points.hs
src/Unions/: FiveCubes.hs  FiveTetrahedra.hs  SphereSphere.hs  ThreeCubes.hs
src/Utils/: CartesianPolar.hs  ChangeOfSigns.hs  ChangeOfSigns2.hs  CircleTransfo.hs  Colour.hs  Cone.hs  ConeDouble.hs  ConvertPPM.hs  Cylinder.hs  HorseSaddle.hs  Mobius.hs  OpenGL.hs  Palettes.hs  Prism.hs  PrismaticPath.hs  ReadOBJ.hs  ReadOFF.hs  SphereMesh.hs  SphereWedge.hs  SphereWedgeThick.hs  SphericalTetrahedron.hs  SphericalTriangle.hs  TetrahedronFaces.hs  TetrahedronMesh.hs  Torus.hs  TorusKnot.hs
src/Utils/Quads/: Color.hs
src/Utils/RegularSphere/: RegularSphere.hs
src/WavyCylinder/: Data.hs  WavyCylinder.hs
src/WavyTorus/: Data.hs  WavyTorus.hs
