name:                opengl-examples
version:             0.1.0.0
homepage:            https://github.com/stla/opengl-examples#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default: True

library
  hs-source-dirs:      src
  exposed-modules:     TruncatedCuboctahedron
                     , TruncatedCuboctahedron.Data
                     , Teapot.Data
                     , Teapot
                     , TeapotAnimation
                     , Utils.ConvertPPM
                     , Utils.OpenGL
                     , Tutorial2
                     , Tutorial2.Bindings
                     , Tutorial2.Cube
                     , Tutorial2.Display
                     , Tutorial2.Points
                     , Utils.ReadOFF
                     , Mushroom
                     , Mushroom.Data
                     , Utils.Colour
                     , Utils.Cylinder
                     , Cylinder
                     , Tesseract
                     , Tesseract.Data
                     , Tesseract.Transformations4D
                     , Utils.Prism
                     , Prism
                     , Utils.Torus
                     , Torus
                     , Torus2
                     , Utils.Mobius
                     , Mobius
                     , Utils.PrismaticPath
                     , PrismaticPath
                     , Helix
                     , Knot
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , containers
                     , hip
                     , directory
                     , colour
                     , palette
                     , ilist
                     , linear
                     , extra
  default-language:    Haskell2010
  ghc-options:        -Wall

executable truncatedCuboctahedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTruncatedCuboctahedron.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTruncatedCuboctahedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable truncatedCuboctahedron2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTruncatedCuboctahedron2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTruncatedCuboctahedron2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable teapot
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTeapot.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTeapot
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable teapotanim
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTeapotAnimation.hs
  ghc-options:         -fllvm -main-is ExeTeapotAnimation
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable tutorial2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTutorial2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTutorial2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable mushroom
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeMushroom.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeMushroom
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable cylinder
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCylinder.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeCylinder
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable tesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTesseract.hs
  ghc-options:         -fllvm -main-is ExeTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable prism
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExePrism.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExePrism
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable torus
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTorus.hs
  ghc-options:         -fllvm -main-is ExeTorus
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable torus2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTorus2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTorus2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable prismaticpath
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExePrismaticPath.hs
  ghc-options:         -fllvm -main-is ExePrismaticPath
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable helix
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHelix.hs
  ghc-options:         -fllvm -main-is ExeHelix
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable knot
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeKnot.hs
  ghc-options:         -fllvm -main-is ExeKnot
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable mobius
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeMobius.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeMobius
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/opengl-examples
