name:                opengl-examples
version:             0.1.0.0
homepage:            https://github.com/stla/opengl-examples#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default: True

library
  hs-source-dirs:      src
  exposed-modules:     TruncatedCuboctahedron
                     , TruncatedCuboctahedron.Data
                     , TruncatedCuboctahedron2
                     , Teapot.Data
                     , Teapot
                     , TeapotAnimation
                     , Utils.ConvertPPM
                     , Utils.OpenGL
                     , Tutorial2
                     , Tutorial2.Bindings
                     , Tutorial2.Cube
                     , Tutorial2.Display
                     , Tutorial2.Points
                     , Utils.ReadOFF
                     , Mushroom
                     , Mushroom.Data
                     , Utils.Colour
                     , Utils.Cylinder
                     , Cylinder
                     , Tesseract
                     , Tesseract.Data
                     , TesseractRotated
                     , Tesseract.Transformations4D
                     , Utils.Prism
                     , Prism
                     , Utils.Torus
                     , Torus
                     , Torus2
                     , Utils.Mobius
                     , Mobius
                     , Utils.PrismaticPath
                     , PrismaticPath
                     , Helix
                     , Knot
                     , Utils.TorusKnot
                     , TorusKnot
                     , Utils.SphereMesh
                     , SphereMesh
                     , Utils.HorseSaddle
                     , HorseSaddle
                     , HorseSaddle2
                     , HorseSaddle3
                     , GreatIcosahedron.Data
                     , GreatIcosahedron
                     , CompoundFiveTetrahedra.Data
                     , CompoundFiveTetrahedra
                     , CompoundFiveTetrahedra2
                     , Head.Data
                     , Head
                     , SpaceShuttle.Data
                     , SpaceShuttle
                     , CompoundTenTetrahedra.Data
                     , CompoundTenTetrahedra
                     , CompoundTenTetrahedra2
                     , GreatStellatedDodecahedron
                     , GreatStellatedDodecahedron.Data
                     , Utils.SphereWedge
                     , SphereWedge
                     , Hosohedron
                     , CompoundFiveOctahedra
                     , CompoundFiveOctahedra.Data
                     , Strange.Data
                     , Strange
                     , TruncatedTesseract.Data
                     , TruncatedTesseract
                     , RectifiedTesseract.Data
                     , RectifiedTesseract
                     , CantellatedTesseract.Data
                     , CantellatedTesseract
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
                     , containers
                     , hip
                     , directory
                     , colour
                     , palette
                     , ilist
                     , linear
                     , extra
                     , split
  default-language:    Haskell2010
  ghc-options:        -Wall

executable truncatedCuboctahedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTruncatedCuboctahedron.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTruncatedCuboctahedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable truncatedCuboctahedron2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTruncatedCuboctahedron2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTruncatedCuboctahedron2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable teapot
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTeapot.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTeapot
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable teapotanim
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTeapotAnimation.hs
  ghc-options:         -fllvm -main-is ExeTeapotAnimation
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable tutorial2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTutorial2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTutorial2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable mushroom
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeMushroom.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeMushroom
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable cylinder
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCylinder.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeCylinder
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable tesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTesseract.hs
  ghc-options:         -fllvm -main-is ExeTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable tesseractrotated
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTesseractRotated.hs
  ghc-options:         -fllvm -main-is ExeTesseractRotated
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable truncatedtesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTruncatedTesseract.hs
  ghc-options:         -fllvm -main-is ExeTruncatedTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable rectifiedtesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeRectifiedTesseract.hs
  ghc-options:         -fllvm -main-is ExeRectifiedTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable cantellatedtesseract
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCantellatedTesseract.hs
  ghc-options:         -fllvm -main-is ExeCantellatedTesseract
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable prism
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExePrism.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExePrism
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable torus
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTorus.hs
  ghc-options:         -fllvm -main-is ExeTorus
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable torus2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTorus2.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeTorus2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable prismaticpath
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExePrismaticPath.hs
  ghc-options:         -fllvm -main-is ExePrismaticPath
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable helix
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHelix.hs
  ghc-options:         -fllvm -main-is ExeHelix
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable knot
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeKnot.hs
  ghc-options:         -fllvm -main-is ExeKnot
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable torusknot
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeTorusKnot.hs
  ghc-options:         -fllvm -main-is ExeTorusKnot
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable mobius
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeMobius.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N -main-is ExeMobius
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable spheremesh
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeSphereMesh.hs
  ghc-options:         -fllvm -main-is ExeSphereMesh
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable horsesaddle
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHorseSaddle.hs
  ghc-options:         -fllvm -main-is ExeHorseSaddle
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable horsesaddle2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHorseSaddle2.hs
  ghc-options:         -fllvm -main-is ExeHorseSaddle2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable horsesaddle3
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHorseSaddle3.hs
  ghc-options:         -fllvm -main-is ExeHorseSaddle3
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable greaticosahedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeGreatIcosahedron.hs
  ghc-options:         -fllvm -main-is ExeGreatIcosahedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable greatstellateddodecahedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeGreatStellatedDodecahedron.hs
  ghc-options:         -fllvm -main-is ExeGreatStellatedDodecahedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundfivetetrahedra
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundFiveTetrahedra.hs
  ghc-options:         -fllvm -main-is ExeCompoundFiveTetrahedra
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundfivetetrahedra2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundFiveTetrahedra2.hs
  ghc-options:         -fllvm -main-is ExeCompoundFiveTetrahedra2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundtentetrahedra
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundTenTetrahedra.hs
  ghc-options:         -fllvm -main-is ExeCompoundTenTetrahedra
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundtentetrahedra2
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundTenTetrahedra2.hs
  ghc-options:         -fllvm -main-is ExeCompoundTenTetrahedra2
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable compoundfiveoctahedra
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeCompoundFiveOctahedra.hs
  ghc-options:         -fllvm -main-is ExeCompoundFiveOctahedra
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

executable hosohedron
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeHosohedron.hs
  ghc-options:         -fllvm -main-is ExeHosohedron
  build-depends:       base >= 4.7 && < 5
                     , opengl-examples
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/opengl-examples
